--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -37,9 +37,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "dev.zsz.flutter_esp_example"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        // Espressif provisioning library supports SDK 23 and above
+        // More info at https://github.com/espressif/esp-idf-provisioning-android
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
