chore: add homepage to pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_esp
 description: A new Flutter plugin project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/060-dev/flutter_esp
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: ">=2.18.0 <3.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
